FIX: Splash screen for dark mode

--- a/res/scss/dark-theme.css
+++ b/res/scss/dark-theme.css
@@ -6816,3 +6816,18 @@ header {
 .maxHeight {
   max-height: 512px;
 }
+
+.splash {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #292b2c;
+  z-index: 1;
+  overflow: auto;
+}
+
+.name-logo {
+  margin: 25%;
+}
